Added concept of values and expressions.

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -3,6 +3,6 @@ include_directories(
     "${CMAKE_CURRENT_SOURCE_DIR}"
     )
 
-add_subdirectory(Assembler)
 add_subdirectory(Common)
+add_subdirectory(Compiler)
 add_subdirectory(GUI)
