--- a/Sources/GUI/CMakeLists.txt
+++ b/Sources/GUI/CMakeLists.txt
@@ -9,7 +9,7 @@ add(ZXToolkit
         Network
     LIBS
         Common
-        Assembler
+        Compiler
     SOURCES
         AboutDialog.cpp
         AboutDialog.h
