Implemented UI for project compilation.

--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -19,6 +19,8 @@ add(Compiler
         Tree/SymbolTable.h
         Tree/Value.cpp
         Tree/Value.h
+        CompilerError.cpp
+        CompilerError.h
         Lexer.cpp
         Lexer.h
         LexerUtils.cpp
