Use std::filesystem for I/O operations.

--- a/Sources/Common/CMakeLists.txt
+++ b/Sources/Common/CMakeLists.txt
@@ -3,6 +3,8 @@ add(Common
     STATIC_LIBRARY
     SOURCES
         Common.h
+        Conversion.cpp
+        Conversion.h
         GC.cpp
         GC.h
         IO.cpp
