--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -19,6 +19,8 @@ add(Compiler
         Tree/SymbolTable.h
         Tree/Value.cpp
         Tree/Value.h
+        Compiler.cpp
+        Compiler.h
         CompilerError.cpp
         CompilerError.h
         Lexer.cpp
