Working on assembler parser.

--- a/Sources/Common/CMakeLists.txt
+++ b/Sources/Common/CMakeLists.txt
@@ -3,10 +3,10 @@ add(Common
     STATIC_LIBRARY
     SOURCES
         Common.h
-        Conversion.cpp
-        Conversion.h
         GC.cpp
         GC.h
         IO.cpp
         IO.h
+        Strings.cpp
+        Strings.h
     )
