Added some tests.

--- a/Sources/GUI/CMakeLists.txt
+++ b/Sources/GUI/CMakeLists.txt
@@ -8,6 +8,7 @@ add(RetroToolkit
     LIBS
         Common
         Compiler
+        RunTests
     SOURCES
         Util/Conversion.cpp
         Util/Conversion.h
