Proper output generator code.

--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -50,6 +50,7 @@ add(Compiler
         Linker/Program.h
         Linker/ProgramSection.cpp
         Linker/ProgramSection.h
+        Output/IOutputWriter.h
         Output/TRDOSWriter.cpp
         Output/TRDOSWriter.h
         Tree/Expr.cpp
