Added CMakeLists for LibSpectrum.

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_subdirectory(Bas2Tap)
 add_subdirectory(Catch)
+add_subdirectory(LibSpectrum)
 add_subdirectory(LZSA)
 add_subdirectory(RapidXML)
 add_subdirectory(ZX7)
