Implemented generation of WAV files.

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_subdirectory(AudioFile)
 add_subdirectory(Bas2Tap)
 add_subdirectory(Catch)
+add_subdirectory(FuseUtils)
 add_subdirectory(LibSpectrum)
 add_subdirectory(LZSA)
 add_subdirectory(RapidXML)
