--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -6,4 +6,5 @@ include_directories(
 add_subdirectory(Common)
 add_subdirectory(Compiler)
 add_subdirectory(GUI)
+add_subdirectory(Java)
 add_subdirectory(Tests)
