Integrate ASM into the build system.

--- a/Sources/Java/build.xml
+++ b/Sources/Java/build.xml
@@ -14,8 +14,59 @@
                >
             <compilerarg value="-Xlint:all" />
         </javac>
+
         <javac includeantruntime="false"
                srcdir="Tools"
+               destdir="Build/Tools"
+               debug="on"
+               source="1.5"
+               target="1.5"
+               >
+            <compilerarg value="-Xlint:all" />
+        </javac>
+
+        <javac includeantruntime="false"
+               srcdir="../../Libs/Asm/asm/src/main/java"
+               destdir="Build/Tools"
+               debug="on"
+               source="1.5"
+               target="1.5"
+               >
+            <compilerarg value="-Xlint:all" />
+        </javac>
+
+        <javac includeantruntime="false"
+               srcdir="../../Libs/Asm/asm-tree/src/main/java"
+               destdir="Build/Tools"
+               debug="on"
+               source="1.5"
+               target="1.5"
+               >
+            <compilerarg value="-Xlint:all" />
+        </javac>
+
+        <javac includeantruntime="false"
+               srcdir="../../Libs/Asm/asm-analysis/src/main/java"
+               destdir="Build/Tools"
+               debug="on"
+               source="1.5"
+               target="1.5"
+               >
+            <compilerarg value="-Xlint:all" />
+        </javac>
+
+        <javac includeantruntime="false"
+               srcdir="../../Libs/Asm/asm-commons/src/main/java"
+               destdir="Build/Tools"
+               debug="on"
+               source="1.5"
+               target="1.5"
+               >
+            <compilerarg value="-Xlint:all" />
+        </javac>
+
+        <javac includeantruntime="false"
+               srcdir="../../Libs/Asm/asm-util/src/main/java"
                destdir="Build/Tools"
                debug="on"
                source="1.5"
@@ -29,6 +80,7 @@
              includes="**"
             >
         </jar>
+
         <jar destfile="Build/RetroBuild.jar"
              basedir="Build/Tools"
              includes="**"
