Implemented addressof(), baseof() and sizeof().

--- a/Sources/Compiler/CMakeLists.txt
+++ b/Sources/Compiler/CMakeLists.txt
@@ -85,6 +85,7 @@ add(Compiler
         Linker/CompiledOutput.h
         Linker/DebugInformation.cpp
         Linker/DebugInformation.h
+        Linker/ISectionResolver.h
         Linker/Linker.cpp
         Linker/Linker.h
         Linker/Program.cpp
