Implemented support for ZX0 compression.

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(FuseUtils)
 add_subdirectory(LibSpectrum)
 add_subdirectory(LZSA)
 add_subdirectory(RapidXML)
+add_subdirectory(ZX0)
 add_subdirectory(ZX7)
